--- a/index.html
+++ b/index.html
@@ -37,5 +37,79 @@
         </div>
       </div>
     </header>
+    <!-- Main -->
+    <div class="main">
+      <div class="hero">
+        <div class="main-content">
+          <div class="body">
+            <!-- hero left -->
+            <div class="media-block">
+              <img
+                src="./assets/img/fullstack0.jpg"
+                alt="How to become a fullstack programmer"
+                class="img"
+              />
+              <div class="hero-summary">
+                <!-- item1 -->
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/icon/ux.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">UI/UX Design</p>
+                  </div>
+                </div>
+
+                <!-- item2 -->
+                <div class="item">
+                  <div class="icon icon2">
+                    <img src="./assets/icon/deve.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">25 Courses</p>
+                    <p class="title">Development</p>
+                  </div>
+                </div>
+
+                <!-- item3 -->
+                <div class="item">
+                  <div class="icon icon3">
+                    <img src="./assets/icon/mar.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">30 Courses</p>
+                    <p class="title">Marketing</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- hero right -->
+            <div class="content-block">
+              <h1 class="heading">How to become a fullstack programmer</h1>
+              <p class="desc">
+                After completing this course, you will become a pro-fullstack
+                developer.
+              </p>
+              <!-- cta: call to action -->
+              <div class="cta-group">
+                <a href="#!" class="btn hero-cta">See courses</a>
+                <button class="watch-video">
+                  <div class="icon">
+                    <img src="./assets/icon/tri.svg" alt="" />
+                  </div>
+                  <span>Watch video</span>
+                </button>
+              </div>
+              <p class="desc desc-recent">Recent engagement</p>
+              <p class="desc big">
+                <strong>50K</strong> students <strong>70+</strong> courses
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
